--- a/Galaxy.DataAccess/Galaxy.DataAccess.csproj
+++ b/Galaxy.DataAccess/Galaxy.DataAccess.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Galaxy.Model\Galaxy.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
