--- a/Galaxy.DataAccess/Galaxy.DataAccess.csproj
+++ b/Galaxy.DataAccess/Galaxy.DataAccess.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Galaxy.Core\Galaxy.Core.csproj" />
-    <ProjectReference Include="..\Galaxy.Model\Galaxy.Model.csproj" />
+    <ProjectReference Include="..\Galaxy.Model\Galaxy.Entities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
