--- a/Galaxy.PL.CoreMVC/Galaxy.PL.CoreMVC.csproj
+++ b/Galaxy.PL.CoreMVC/Galaxy.PL.CoreMVC.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Galaxy.BusinessLogic\Galaxy.BusinessLogic.csproj" />
-    <ProjectReference Include="..\Galaxy.Model\Galaxy.Model.csproj" />
+    <ProjectReference Include="..\Galaxy.Model\Galaxy.Entities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
