--- a/Galaxy.BusinessLogic/Galaxy.BusinessLogic.csproj
+++ b/Galaxy.BusinessLogic/Galaxy.BusinessLogic.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Galaxy.DataAccess\Galaxy.DataAccess.csproj" />
-    <ProjectReference Include="..\Galaxy.Model\Galaxy.Entities.csproj" />
+    <ProjectReference Include="..\Galaxy.Entities\Galaxy.Entities.csproj" />
   </ItemGroup>
 
 </Project>
