--- a/Galaxy.PL.CoreMVC/Galaxy.PL.CoreMVC.csproj
+++ b/Galaxy.PL.CoreMVC/Galaxy.PL.CoreMVC.csproj
@@ -21,7 +21,7 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Update="Views\Account\Login.cshtml">
+    <Content Update="Views\Account\LoginPartial.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
