--- a/Galaxy.PL.CoreMVC/Galaxy.PL.CoreMVC.csproj
+++ b/Galaxy.PL.CoreMVC/Galaxy.PL.CoreMVC.csproj
@@ -11,6 +11,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="RestSharp" Version="106.13.0" />
   </ItemGroup>
 
   <ItemGroup>
